--- a/MyRuns/app/src/main/res/values/strings.xml
+++ b/MyRuns/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyRuns 6 D</string>
+    <string name="app_name">MyRuns 6 E</string>
 
     <!-- Somehow required for th Google Maps fragment...
    also required: see google_maps_api.xml  -->
